# cpp_python_bindings

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh
src/: main.cpp
test/: main.py
